--- a/index.html
+++ b/index.html
@@ -98,7 +98,24 @@
 
   <div class="container">
     <h1>Ways to Access SIAConnect</h1>
+<h3>Ready When You Are: Add SIAConnect to Teams in Seconds</h3>
 
+<p>No installs. No IT ticket. No friction.
+Adding SIAConnect to Microsoft Teams is as easy as starting a conversation.</p>
+
+<p>Here’s how:</p>
+<ol>
+<li>Open Microsoft Teams</br>
+On desktop or mobile — whichever you use most.</li>
+<li>Go to the Chat panel</br>
+Look for the “Chat” tab in your sidebar or bottom menu.</li>
+<li>Search for “SIAConnect”</br>
+In the “Start a new chat” field, type SIAConnect.</li>
+<li>Click to open</br>
+The assistant will appear just like a teammate. Click to begin chatting.</li>
+</ol>
+<p>That’s it. No setup required.
+Just type your question or request—and let SIAConnect do the rest.</p>
     <div class="mockup-row">
       <div class="mockup-column">
   <h2>Mobile</h2>
