--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <h2>The Future of Knowledge</h2>
 	  <h3>Ready for You</h3>
     <p>What if accessing the knowledge you need — documents, answers, video walkthroughs, request tools — was as simple as messaging a colleague?</p>
-				<h3>Guess what?</h3>
-				<h3>It is!</h3>
-				<div class="platform-divider"></div>
+				<h3>Guess what?<br>
+				It is!</h3>
 				<h1>Wecolme to SIAConnect</h1>
   </div>
 </section>
@@ -98,23 +97,24 @@
 
   <div class="container">
     <h1>Ways to Access SIAConnect</h1>
-<h3>Ready When You Are: Add SIAConnect to Teams in Seconds</h3>
+<h3>Ready When You Are:<br>
+	Add SIAConnect to Teams in Seconds</h3>
 
 <p>No installs. No IT ticket. No friction.
 Adding SIAConnect to Microsoft Teams is as easy as starting a conversation.</p>
 
-<p>Here’s how:</p>
+<h3>Here’s how:</h3>
 <ol>
-<li>Open Microsoft Teams</br>
+<li>Open Microsoft Teams<br>
 On desktop or mobile — whichever you use most.</li>
-<li>Go to the Chat panel</br>
+<li>Go to the Chat panel<br>
 Look for the “Chat” tab in your sidebar or bottom menu.</li>
-<li>Search for “SIAConnect”</br>
+<li>Search for “SIAConnect”<br>
 In the “Start a new chat” field, type SIAConnect.</li>
-<li>Click to open</br>
+<li>Click to open<br>
 The assistant will appear just like a teammate. Click to begin chatting.</li>
 </ol>
-<p>That’s it. No setup required.
+<p>That’s it. No setup required.<br>
 Just type your question or request—and let SIAConnect do the rest.</p>
     <div class="mockup-row">
       <div class="mockup-column">
@@ -284,7 +284,7 @@ Just type your question or request—and let SIAConnect do the rest.</p>
 <section id="behind-the-scenes" class="main style3 fade-in-section">
   <div class="container">
     <header class="major">
-      <h1>Under the Hood</h1>
+      <h1>Behind the Scenes</h1>
       <p>Explore how SIAConnect connects your tools and teams.</p>
     </header>
 
