--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="benefit-container">
 				
 					<h2>Benefits of implementing an AI Agent</h2>
-					<p>Effectively bridges multiple knowledge systems within a single application</p>
+					<h3>Effectively bridges multiple knowledge systems within a single application</h3>
 				</header>
 			<ul>	<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
@@ -80,8 +80,7 @@
 				</div>
 			</div>
 			<div class="benefit-container">
-				<header class="major">
-			<h1>🔐 Security & Compliance Considerations</h1>
+			<h2>Security & Compliance Considerations</h2>
 			<ul>
 <li>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</li>
 <li>Branding, tone, and usage logs align with Responsible AI Practices.</li>
@@ -96,11 +95,11 @@
 <section id="access" class="siaconnect-access-section fade-in-section">
 
   <div class="container">
-    <h1>Ways to Access SIAConnect</h1>
+    <h2>Ways to Access SIAConnect</h2>
 <h3>Ready When You Are:<br>
 	Add SIAConnect to Teams in Seconds</h3>
 
-<p>No installs. No IT ticket. No friction.
+<p>No installs. No IT ticket. No friction.<br>
 Adding SIAConnect to Microsoft Teams is as easy as starting a conversation.</p>
 
 <h3>Here’s how:</h3>
@@ -121,12 +120,14 @@ Just type your question or request—and let SIAConnect do the rest.</p>
   <h2>Mobile</h2>
   <div class="mockup-frame">
     <img src="images/siaconnect-mobile-mockup-final.png" alt="SIAConnect on Mobile">
-  </div>
   <p>Access through your company provisioned mobile device</p>
+</div>
+</div>
 </div>
 
       <div class="mockup-column">
         <h2>Desktop</h2>
+	<div class="mockup-frame">
         <img src="images/siaconnect_mockup_desktop_matched.png" alt="SIAConnect on Desktop">
         <p>Access SIAConnect through your PC</p>
       </div>
@@ -138,58 +139,58 @@ Just type your question or request—and let SIAConnect do the rest.</p>
 <!-- SIAConnect In Action Section -->
 <section id="features" class="features-section fade-in-section">
   <div class="container">
-      <h1>SIAConnect In Action</h1>
+      <h2>SIAConnect In Action</h2>
 
     <!-- Features -->
     <div class="row gtr-150">
       <div class="col-6 col-12-medium">
         <img src="assets/images/icons/doc-search-icon.png" alt="Document Search" style="max-width: 25%; height: auto;">
-        <h2>Search Documents & Knowledge</h2>
+        <h3>Search Documents & Knowledge</h3>
         <p>Instantly find product documents, technical manuals, and KB articles from SharePoint (SIA) and Dataverse—all from inside Microsoft Teams.</p>
       </div>
 <div class="platform-divider"></div>
       <div class="col-6 col-12-medium">
         <img src="assets/images/icons/doc-req-icon.png" alt="Submit Track Requests" style="max-width: 25%; height: auto;">
-        <h2>Submit & Track Requests</h2>
+        <h3>Submit & Track Requests</h3>
         <p>Submit document requests or check Jira request status without ever leaving the chat.</p>
       </div>
 <div class="platform-divider"></div>
       <div class="col-6 col-12-medium">
         <img src="assets/images/icons/convert-icon.png" alt="Convert Measurements" style="max-width: 25%; height: auto;">
-        <h2>Convert Measurements</h2>
+        <h3>Convert Measurements</h3>
         <p>Convert between metric and SAE units instantly—perfect for technicians in the field.</p>
       </div>
 <div class="platform-divider"></div>
       <div class="col-6 col-12-medium">
         <img src="assets/images/icons/vid-search-icon.png" alt="Video Seaerch" style="max-width: 25%; height: auto;">
-        <h2>View Product Videos</h2>
+        <h3>View Product Videos</h3>
         <p>Search Vimeo and access product training and service videos directly from Teams.</p>
       </div>
     </div>
 
 <!-- Use Cases -->
 <header class="minor" style="margin-top: 80px;">
-  <h1>Built for Every Role</h1>
+  <h2>Built for Every Role</h2>
 </header>
 
 <div class="role-highlight">
   <div class="row aln-center">
     <div class="col-4 col-12-small">
-      <h2>Technicians</h2>
+      <h3>Technicians</h3>
       <img src="assets/images/al-tech-avatar-transparent.png" alt="Technician Avatar" style="max-width: 60%; height: auto;">
       <h4>Mobile & Desktop</h4>
       <p>Manuals and guides<br>Repair steps<br>Unit conversion</p>
     </div>
 
     <div class="col-4 col-12-small">
-      <h2>Help Desk</h2>
+      <h3>Help Desk</h3>
       <img src="assets/images/allison-helpdesk-avatar-transparent.png" alt="Help Desk Avatar" style="max-width: 60%; height: auto;">
       <h4>Desktop</h4>
       <p>Knowledge base<br>Manuals and guides<br>Document summaries</p>
     </div>
 
     <div class="col-4 col-12-small">
-      <h2>Managers</h2>
+      <h3>Managers</h3>
       <img src="assets/images/sy-manager-avatar-transparent.png" alt="Manager Avatar" style="max-width: 60%; height: auto;">
       <h4>Mobile & Desktop</h4>
       <p>Document requests<br>Reporting<br>Training class management</p>
@@ -201,9 +202,7 @@ Just type your question or request—and let SIAConnect do the rest.</p>
 <!-- SIAConnect vs Current Method Comparison Table -->
 <section id="comparison" class="main style2">
   <div class="container">
-    <header class="major">
-  <h1>How SIAConnect Compares</h1>
-		</header>
+  <h2>How SIAConnect Compares</h2>
     <div class="comparison-wrapper">
       <table class="comparison-table">
       <thead>
@@ -283,10 +282,8 @@ Just type your question or request—and let SIAConnect do the rest.</p>
 <!-- Behind the Scenes Section (Updated) -->
 <section id="behind-the-scenes" class="main style3 fade-in-section">
   <div class="container">
-    <header class="major">
-      <h1>Behind the Scenes</h1>
+      <h2>Behind the Scenes</h2>
       <p>Explore how SIAConnect connects your tools and teams.</p>
-    </header>
 
     <div class="platform-grid">
       <div class="platform-item">
@@ -343,10 +340,9 @@ Just type your question or request—and let SIAConnect do the rest.</p>
 <!-- Roadmap Section -->
 <section id="deployment" class="main style3 fade-in-section">
   <div class="container">
-    <header class="major">
-					<h1>What the Future Holds</h1>
+					<h2>What the Future Holds</h2>
 					<p>A glimpse into what’s coming next for SIAConnect</p>
-				</header>
+	
 				<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
 						<h2>Field Training Enrollment</h2>
@@ -376,27 +372,25 @@ Just type your question or request—and let SIAConnect do the rest.</p>
 <!-- Deploying SIAConnect Section -->
 <section id="deployment" class="main style3 fade-in-section">
   <div class="container">
-    <header class="major">
-      <h1>Deploying SIAConnect: The Road Ahead</h1>
-    </header>
+      <h2>Deploying SIAConnect: The Road Ahead</h2>
 
     <div class="row gtr-150">
       <div class="col-12">
-        <h2>Rollout Strategy</h2>
+        <h3>Rollout Strategy</h3>
         <p>
           Initial launch inside Microsoft Teams to targeted user groups, including Training, Help Desk Supervisors, and Senior Agents.<br>
           Phased expansion based on adoption success, user feedback, and feature readiness.<br>
           All access managed securely through Microsoft Entra ID groups — no public exposure.
         </p>
 
-        <h2>Onboarding Experience</h2>
+        <h3>Onboarding Experience</h3>
         <p>
           A streamlined "Welcome to SIAConnect" guide provided at rollout.<br>
           In-chat tips and conversational guidance available immediately within Teams.<br>
           Ongoing discovery supported through a "Tip of the Day" feature to keep users engaged.
         </p>
 
-        <h2>Updates and Future Development</h2>
+        <h3>Updates and Future Development</h3>
         <p>
           Continuous feature improvements based on user feedback.<br>
           Transparent feature request tracking through Jira.<br>
