--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Just type your question or request—and let SIAConnect do the rest.</p>
       </div>
 <div class="platform-divider"></div>
       <div class="platform-item">
-        <img src="assets/images/dataverse-icon.png" alt="Dataverse" class="platform-logo">
+        <img src="assets/images/dataverse-icon.png" alt="Dataverse" class="platform-logo" style="width: 48px; height: 48px;">
         <div class="platform-description">
           <h2>Dataverse</h2>
           <p>Stores knowledge articles, request metadata, and user preferences in a scalable low-code database.</p>
