--- a/request.html
+++ b/request.html
@@ -23,10 +23,10 @@
 		    <img src="images/documentrequest-banner.png" style="width:50%; height:auto;">
                 <h2>Document Request</h2>
             </header>
-            <ul><li style="align:left;">To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
-	    <li style="align:left;">SIAConnect will respond with a document request form.</li>
-	   <li style="align:left;">Select which document type you are wanting (e.g., Tech bulletin, User Manual, Knowledge Base article).</li>
-	    <li style="align:left;">Select the product model that the request pertains to. If the model is not in the list, you can manually type in the model.</li>
+            <ul><li">To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
+	    <li>SIAConnect will respond with a document request form.</li>
+	   <li>Select which document type you are wanting (e.g., Tech bulletin, User Manual, Knowledge Base article).</li>
+	    <li style="align: left;">Select the product model that the request pertains to. If the model is not in the list, you can manually type in the model.</li>
 	   <li style="align:left;">Add a description - this is everything that you want to make sure is completed and included in the document. The more information, the better!</li>
 	    <li>Set a priority. If there is no rush (can wait a week or longer), set the priority to <b>Low</b>. If there's not a huge rush but you need it within 5-7 days, select <b></b>Medium</b>. For urgent requests, set the priority as <b>High</b>.</b></li>
 	    <li>Once you have filled out the form, select <b>OK</b>.</li>
