--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="benefit-container">
+			</section>
+<!-- AI Security Section -->
+		<section id="security" class="security-section">
+			<div class="security-container">
 			<h2>Security & Compliance Considerations</h2>
 			<ul>
 <li>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</li>
