--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 				</div>
 			</div>
 			</section>
+		
 <!-- AI Security Section -->
 		<section id="security" class="security-section">
 			<div class="security-container">
@@ -97,8 +98,8 @@
 
   <div class="container">
     <h2>Ways to Access SIAConnect</h2>
-<h3>Ready When You Are:<br>
-	Add SIAConnect to Teams in Seconds</h3>
+<h3>Ready When You Are</h3>
+	<h4>Add SIAConnect to Teams in Seconds</h4>
 
 <p>No installs. No IT ticket. No friction.<br>
 Adding SIAConnect to Microsoft Teams is as easy as starting a conversation.</p>
