--- a/index.html
+++ b/index.html
@@ -98,25 +98,12 @@
 
   <div class="container">
     <h2>Ways to Access SIAConnect</h2>
-<h3>Ready When You Are</h3>
-	<h4>Add SIAConnect to Teams in Seconds</h4>
+<p>Designed with Glory employees in mind - from field technicians to help desk agents and decision-makers - SIAConnect blends sleek utility with a deep understanding of how teams within Glory work. It's fast, intuitive, and already connected to the tools that Glory uses every day.
+<ul>
+	<li>SIAConnect lives right inside Teams (desktop or mobile — whichever you use most), where work already happens.</li>
+	<li>Adding SIAConnect to Microsoft Teams is as easy as starting a conversation.</li>
+</ul>
 
-<p>No installs. No IT ticket. No friction.<br>
-Adding SIAConnect to Microsoft Teams is as easy as starting a conversation.</p>
-
-<h3>Here’s how:</h3>
-<ol>
-<li>Open Microsoft Teams<br>
-On desktop or mobile — whichever you use most.</li>
-<li>Go to the Chat panel<br>
-Look for the “Chat” tab in your sidebar or bottom menu.</li>
-<li>Search for “SIAConnect”<br>
-In the “Start a new chat” field, type SIAConnect.</li>
-<li>Click to open<br>
-The assistant will appear just like a teammate. Click to begin chatting.</li>
-</ol>
-<p>That’s it. No setup required.<br>
-Just type your question or request—and let SIAConnect do the rest.</p>
     <div class="mockup-row">
       <div class="mockup-column">
   <h3>Mobile</h3>
