--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </section>
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section id="comparison" class="main style2">
+<section id="comparison" class="comparison">
   <div class="container">
   <h2>How SIAConnect Compares</h2>
     <div class="comparison-wrapper">
@@ -262,8 +262,8 @@
 
 
 <!-- Behind the Scenes Section (Updated) -->
-<section id="behind-the-scenes" class="main style3 fade-in-section">
-  <div class="container">
+<section id="behind-the-scenes" class="behind-the-scenes-section fade-in-section">
+  <div class="behind-the-scenes-containerr">
       <h2>Behind the Scenes</h2>
       <p>Explore how SIAConnect connects your tools and teams.</p>
 
