--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 </section>
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section id="comparison" class="comparison">
-  <div class="container">
+<section id="comparison" class="comparison-section">
+  <div class="comparison-container">
   <h2>How SIAConnect Compares</h2>
     <div class="comparison-wrapper">
       <table class="comparison-table">
