--- a/request.html
+++ b/request.html
@@ -17,12 +17,12 @@
 
         </div>
     </header>
-<section class="future-section fade-in-section">
-	<div class="future-container">
-            <header class="major">
+<section class="help-section fade-in-section">
+	<div class="help-container">
+           
 		    <img src="images/documentrequest-banner.png" style="width:50%; height:auto;">
                 <h2>Document Request</h2>
-            </header>
+          
             <ul><li">To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
 	    <li>SIAConnect will respond with a document request form.</li>
 	   <li>Select which document type you are wanting (e.g., Tech bulletin, User Manual, Knowledge Base article).</li>
