--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
 <!-- Behind the Scenes Section (Updated) -->
 <section id="behind-the-scenes" class="behind-the-scenes-section fade-in-section">
-  <div class="behind-the-scenes-containerr">
+  <div class="behind-the-scenes-container">
       <h2>Behind the Scenes</h2>
       <p>Explore how SIAConnect connects your tools and teams.</p>
 
@@ -320,7 +320,7 @@
 </section>
 
 <!-- Roadmap Section -->
-<section id="deployment" class="main style3 fade-in-section">
+<section id="whats-next" class="main style3 fade-in-section">
   <div class="container">
 					<h2>What the Future Holds</h2>
 					<p>A glimpse into what’s coming next for SIAConnect</p>
