--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel=icon" href="assets/images/favicon-32.png" type="image/png">
+		<link rel='icon" href="assets/images/favicon-32.png" type="image/png">
 		<title>SIAConnect - Built for the future. Ready right now</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +24,7 @@
 
 		
 <!-- SIAConnect - Future of Knowledge Section -->
-<section section id="home" class="future-section fade-in-section">
+<section id="home" class="future-section fade-in-section">
 		<p>What if accessing the knowledge you need — documents, answers, video walkthroughs, request tools — was as simple as messaging a colleague?</p>
 	<div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
