--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel='icon" href="assets/images/favicon-32.png" type="image/png">
+		<link rel="icon" href="assets/images/favicon-32.png" type="image/png">
 		<title>SIAConnect - Built for the future. Ready right now</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
