--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body class="is-preload">
 	
 <nav id="nav">
+<a href="#home">Home</a>
 <a href="#video">What's Possible</a>
 <a href="#benefits">AI Agent Benefits</a>
 <a href="#access">Ways to Access</a>
@@ -122,7 +123,7 @@
 		
 <!-- SIAConnect In Action Section -->
 <section id="features" class="features-section fade-in-section">
-  <div class="container">
+  <div class="features-container">
       <h2>SIAConnect In Action</h2>
 
     <!-- Features -->
@@ -182,7 +183,7 @@
 
 <!-- SIAConnect vs Current Method Comparison Table -->
 <section id="comparison" class="comparison-section">
-  <div class="comparison-container">
+  <div class="container">
   <h2>How SIAConnect Compares</h2>
     <div class="comparison-wrapper">
       <table class="comparison-table">
@@ -262,7 +263,7 @@
 
 <!-- Behind the Scenes Section (Updated) -->
 <section id="behind-the-scenes" class="behind-the-scenes-section fade-in-section">
-  <div class="behind-the-scenes-container">
+  <div class="container">
       <h2>Behind the Scenes</h2>
       <p>Explore how SIAConnect connects your tools and teams.</p>
 
