--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </section>
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section id="comparison" class="comparison-section">
+<section id="comparison" class="main style3 fade-in-section">
   <div class="container">
   <h2>How SIAConnect Compares</h2>
     <div class="comparison-wrapper">
