--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ window.addEventListener('scroll', function() {
 });
 </script>
 	<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
