--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		
 <!-- SIAConnect - Future of Knowledge Section -->
-<section id="home" class="future-section fade-in-section">
+<section id="home" class="future-section">
 		
 	<div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
@@ -38,7 +38,7 @@
 
 		
 <!-- Demo Video Section -->
-		<section id="video" class="demo-section fade-in-section">
+		<section id="video" class="demo-section">
 			<div class="demo-container">
 					<h2>What's Possible</h2>
 				<video style="max-width:100%; height:auto;" controls>
