--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		
 <!-- AI Security Section -->
 		<section id="security" class="security-section">
-			<div class="security-container">
+			<div class="container">
 			<h2>Security & Compliance Considerations</h2>
 			<ul>
 <li>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</li>
@@ -90,11 +90,11 @@
 <li>All data structures (e.g., KBData, Error Codes) reside in secure Dataverse environments.</li>
 </ul>
 </div>
-		</section>
+</section>
 
 		
 <!-- Access Section -->
-<section id="access" class="siaconnect-access-section fade-in-section">
+<section id="access" class="siaconnect-access-section">
 
   <div class="container">
     <h2>Ways to Access SIAConnect</h2>
