--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		
 <!-- AI Security Section -->
 		<section id="security" class="security-section">
-			<div class="container">
+			<div class="security-container">
 			<h2>Security & Compliance Considerations</h2>
 			<ul>
 <li>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</li>
