--- a/index.html
+++ b/index.html
@@ -83,12 +83,10 @@
 		<section id="security" class="security-section">
 			<div class="security-container">
 			<h2>Security & Compliance Considerations</h2>
-			<ul>
-<li>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</li>
-<li>Branding, tone, and usage logs align with Responsible AI Practices.</li>
-<li>No external/public access is enabled or planned.</li>
-<li>All data structures (e.g., KBData, Error Codes) reside in secure Dataverse environments.</li>
-</ul>
+
+<p>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</p>
+<p>No external/public access is enabled or planned.</p>
+<p>All data structures (e.g., KBData, Error Codes) reside in secure Dataverse environments.</p>
 </div>
 </section>
 
