--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 				
 					<h2>Benefits of implementing an AI Agent</h2>
 					<h3>Effectively bridges multiple knowledge systems within a single application</h3>
-				</header>
 			<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
 						<p>Consolidates access to disparate information into one seamless interface.</p>					
@@ -80,8 +79,8 @@
 			</section>
 		
 <!-- AI Security Section -->
-		<section id="security" class="security-section">
-			<div class="security-container">
+		<section id="security" class="sec-section">
+			<div class="sec-container">
 			<h2>Security & Compliance Considerations</h2>
 
 <p>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</p>
