--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<body class="is-preload">
 	
 <nav id="nav">
+<a href="#home">Home</a>
 <a href="#video">What's Possible</a>
 <a href="#benefits">AI Agent Benefits</a>
 <a href="#access">Ways to Access</a>
@@ -96,12 +97,11 @@
 		<section id="security" class="sec-section">
 			<div class="sec-container">
 			<h2>Security & Compliance Considerations</h2>
-			<ul>
-<li>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</li>
-<li>Branding, tone, and usage logs align with Responsible AI Practices.</li>
-<li>No external/public access is enabled or planned.</li>
-<li>All data structures (e.g., KBData, Error Codes) reside in secure Dataverse environments.</li>
-</ul>
+		
+<p>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</p>
+<p>Branding, tone, and usage logs align with Responsible AI Practices.</p>
+<p>No external/public access is enabled or planned.</p>
+<p>All data structures (e.g., KBData, Error Codes) reside in secure Dataverse environments.</p>
 </div>
 		</section>
 
