--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a href="#access">Ways to Access</a>
 <a href="#features">Features</a>
 <a href="#comparison">Comparison</a>
-<a href="#how">Under the Hood</a>
+<a href="#how">Behind the Scenes</a>
 <a href="#roadmap">The Future</a>
 <a href="#roadmap">Roll Out</a>
 
