--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 			</section>
 		
 <!-- AI Security Section -->
-		<section id="security" class="sec-section">
-			<div class="sec-container">
+		<section id="security" class="main style2">
+			<div class="container">
 			<h2>Security & Compliance Considerations</h2>
 		
 <p>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</p>
