--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 </section>
 
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section id="comparison" class="comparison-section">
-  <div class="comparison-container">
+<section id="comparison" class="demo-section">
+  <div class="demo-container">
   <h2>How SIAConnect Compares</h2>
     <div class="comparison-wrapper">
       <table class="comparison-table">
