--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="demo-container">
 					<h2>What's Possible</h2>
 				<video style="max-width:100%; height:auto;" controls>
-					<source src="assets/videos/2025-04-15 18_37_29.mp4" type="video/mp4">
+					<source src="assets/videos/siaconnect-demo-video-01.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
 			</div>
