--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
 					<div class="col-6 col-12-medium">
 						
 						<p>Ensures easy access anytime, anywhere for users.</p>
-					</div>
-					<div class="col-12">
-						
+</div>
+					<div class="col-6 col-12-medium">
 						<p>Adaptable to future changes in business needs and technology.</p>
 					</div>
 				</div>
@@ -97,11 +96,18 @@
 		<section id="security" class="main style2">
 			<div class="container">
 			<h2>Security & Compliance Considerations</h2>
-		
+			<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
 <p>All user interactions occur within Microsoft Teams or SharePoint (SIA), authenticated via Azure AD.</p>
+</div>
+					<div class="col-6 col-12-medium">
 <p>Branding, tone, and usage logs align with Responsible AI Practices.</p>
 <p>No external/public access is enabled or planned.</p>
+</div>
+					<div class="col-6 col-12-medium">
 <p>All data structures (e.g., KBData, Error Codes) reside in secure Dataverse environments.</p>
+</div>
+</div>
 </div>
 		</section>
 
