--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 </section>
 
 <!-- Roadmap Section -->
-<section id="whats-next" class="benefit-section">
+<section id="whats-next" class="siaconnect-access-section fade-in-section">
   <div class="container">
 					<h2>What the Future Holds</h2>
 					<p>A glimpse into what’s coming next for SIAConnect</p>
