--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		
 <!-- SIAConnect - Future of Knowledge Section -->
 <section id="home" class="future-section fade-in-section">
-		<p>What if accessing the knowledge you need — documents, answers, video walkthroughs, request tools — was as simple as messaging a colleague?</p>
+		<h3>What if accessing the knowledge you need — documents, answers, video walkthroughs, request tools — was as simple as messaging a colleague?</h3>
 	<div class="future-container">
     <img src="images/siaconnect-glow.png" alt="SIAConnect in your hands" class="glow-image" />
     <h2>The Future of Knowledge</h2>
@@ -64,7 +64,7 @@
 		
 <!-- AIBenefits Section -->
 		<section id="benefits" class="benefit-section">
-			<div class="benefit-container">
+			<div class="container">
 				
 					<h2>Benefits of implementing an AI Agent</h2>
 					<h3>Effectively bridges multiple knowledge systems within a single application</h3>
