--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 			</section>
 		
 <!-- AI Security Section -->
-		<section id="security" class="main style2">
-			<div class="container">
+		<section id="security" class="behind-the-scenes-section fade-in-section">
+  <div class="behind-the-scenes-container">
 			<h2>Security & Compliance Considerations</h2>
 			<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
