--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		
 <!-- AI Security Section -->
 		<section id="security" class="behind-the-scenes-section fade-in-section">
-  <div class="behind-the-scenes-container">
+  <div class="container">
 			<h2>Security & Compliance Considerations</h2>
 			<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
@@ -376,25 +376,25 @@
 
     <div class="row gtr-150">
       <div class="col-12">
-        <h3>Rollout Strategy</h3>
+        <h2 style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">Rollout Strategy</h2>
         <p>
-          Initial launch inside Microsoft Teams to targeted user groups, including Training, Help Desk Supervisors, and Senior Agents.<br>
-          Phased expansion based on adoption success, user feedback, and feature readiness.<br>
-          All access managed securely through Microsoft Entra ID groups — no public exposure.
+          Initial launch inside Microsoft Teams to targeted user groups, including Training, Help Desk Supervisors, and Senior Agents.</p>
+          <p>Phased expansion based on adoption success, user feedback, and feature readiness.</p>
+          <p>All access managed securely through Microsoft Entra ID groups — no public exposure.
         </p>
 
-        <h3>Onboarding Experience</h3>
+        <h2 style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">Onboarding Experience</h2>
         <p>
-          A streamlined "Welcome to SIAConnect" guide provided at rollout.<br>
-          In-chat tips and conversational guidance available immediately within Teams.<br>
-          Ongoing discovery supported through a "Tip of the Day" feature to keep users engaged.
+          A streamlined "Welcome to SIAConnect" guide provided at rollout.</p>
+          <p>In-chat tips and conversational guidance available immediately within Teams.</p>
+          <p>Ongoing discovery supported through a "Tip of the Day" feature to keep users engaged.
         </p>
 
-        <h3>Updates and Future Development</h3>
+        <h2 style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">Updates and Future Development</h2>
         <p>
-          Continuous feature improvements based on user feedback.<br>
-          Transparent feature request tracking through Jira.<br>
-          Regular content updates and system enhancements without disrupting user experience.
+          Continuous feature improvements based on user feedback.</p>
+          <p>Transparent feature request tracking through Jira.</p>
+          <p>Regular content updates and system enhancements without disrupting user experience.
         </p>
       </div>
     </div>
