--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
 
     <div class="row gtr-150">
       <div class="col-12">
-        <h2 style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">Rollout Strategy</h2>
-        <p>
+        <h2 style="text-align: center; font-size: 2rem; color: #cccccc; margin-top: 40px;">Rollout Strategy</h2>
+        <p style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 2px;">
           Initial launch inside Microsoft Teams to targeted user groups, including Training, Help Desk Supervisors, and Senior Agents.</p>
           <p>Phased expansion based on adoption success, user feedback, and feature readiness.</p>
           <p>All access managed securely through Microsoft Entra ID groups — no public exposure.
