--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
 <!-- Roadmap Section -->
 <section id="whats-next" class="siaconnect-access-section fade-in-section">
-  <div class="container">
+ <div class="behind-the-scenes-container">
 					<h2>What the Future Holds</h2>
 					<p>A glimpse into what’s coming next for SIAConnect</p>
 	
