--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
 		
 <!-- AIBenefits Section -->
 		<section id="benefits" class="benefit-section">
-			<div class="container">
+			<div class="benefit-section-container">
 				
 					<h2>Benefits of implementing an AI Agent</h2>
-					<h3>Effectively bridges multiple knowledge systems within a single application</h3>
-		
+					<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<p>Effectively bridges multiple knowledge systems within a single application</p>
+		</div>
 			<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
 						<p>Consolidates access to disparate information into one seamless interface.</p>
@@ -93,8 +95,8 @@
 			</section>
 		
 <!-- AI Security Section -->
-		<section id="security" class="behind-the-scenes-section fade-in-section">
-  <div class="container">
+		<section id="security" class="sec-section fade-in-section">
+  <div class="sec-section-container">
 			<h2>Security & Compliance Considerations</h2>
 			<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
