--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		
 <!-- AIBenefits Section -->
 		<section id="benefits" class="benefit-section">
-			<div class="benefit-section-container">
+			<div class="benefit-container">
 				
 					<h2>Benefits of implementing an AI Agent</h2>
 					<div class="row gtr-150">
@@ -96,7 +96,7 @@
 		
 <!-- AI Security Section -->
 		<section id="security" class="sec-section fade-in-section">
-  <div class="sec-section-container">
+  <div class="sec-container">
 			<h2>Security & Compliance Considerations</h2>
 			<div class="row gtr-150">
 					<div class="col-6 col-12-medium">
