--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 <a href="#home">Home</a>
 <a href="#video">What's Possible</a>
 <a href="#benefits">AI Agent Benefits</a>
+<a href="#security">Security & Compliance</a>
 <a href="#access">Ways to Access</a>
 <a href="#features">Features</a>
 <a href="#comparison">Comparison</a>
-<a href="#how">Behind the Scenes</a>
-<a href="#roadmap">The Future</a>
-<a href="#roadmap">Roll Out</a>
+<a href="#behind-the-scenes">Behind the Scenes</a>
+<a href="#whats-next">The Future</a>
+<a href="#deployment">Roll Out</a>
 
 </nav>
 
@@ -281,7 +282,7 @@
 </section>
 
 
-<!-- Behind the Scenes Section (Updated) -->
+<!-- Behind the Scenes Section -->
 <section id="behind-the-scenes" class="behind-the-scenes-section fade-in-section">
   <div class="behind-the-scenes-container">
       <h2>Behind the Scenes</h2>
