--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 </div>
 </section>
 
+		
 <!-- SIAConnect vs Current Method Comparison Table -->
 <section id="comparison" class="demo-section">
   <div class="demo-container">
@@ -346,34 +347,38 @@
   </div>
 </section>
 
-<!-- Roadmap Section -->
-<section id="whats-next" class="siaconnect-access-section fade-in-section">
- <div class="behind-the-scenes-container">
+		
+<!-- What's Next Section -->
+<section id="whats-next" class="whatnext-section fade-in-section">
+ <div class="whatnext-container">
 					<h2>What the Future Holds</h2>
 					<p>A glimpse into what’s coming next for SIAConnect</p>
 	
 				<div class="row gtr-150">
-					<div class="col-6 col-12-medium">
-						<h2>Field Training Enrollment</h2>
-						<p>Manage class signups, track attendance, and send post-training surveys automatically.</p>
-					</div>
-					<div class="col-6 col-12-medium">
-						<h2>Favorites & Personalization</h2>
-						<p>Let users save documents, videos, or KB articles and view frequently accessed content first.</p>
-					</div>
-					<div class="col-6 col-12-medium">
-						<h2>User Acknowledgment Tracking</h2>
-						<p>Confirm who’s seen what by linking interactions to each employee’s Entra ID.</p>
-					</div>
-					<div class="col-6 col-12-medium">
-						<h2>Upload & Summary from Technical Bulletins</h2>
-						<p>Drop in a PDF, generate a summary, and create a Knowledge Base article automatically.</p>
-					</div>
-					<div class="col-12">
-						<h2>Real-Time Part Recognition (Beta)</h2>
-						<p>Snap a photo of a product component and let SIAConnect identify it—powered by AI image recognition.</p>
-					</div>
+				<div class="col-6 col-12-medium">
+				<h3>Field Training Enrollment</h3>
+				<p>Manage class signups, track attendance, and send post-training surveys automatically.</p>
 				</div>
+				<div class="col-6 col-12-medium">
+				<h3>Favorites & Personalization</h3>
+				<p>Let users save documents, videos, or KB articles and view frequently accessed content first.</p>
+				</div></div>
+	 
+				<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
+				<h3>User Acknowledgment Tracking</h3>
+				<p>Confirm who’s seen what by linking interactions to each employee’s Entra ID.</p>
+				</div>
+				<div class="col-6 col-12-medium">
+				<h3>Upload & Summary from Technical Bulletins</h3>
+				<p>Drop in a PDF, generate a summary, and create a Knowledge Base article automatically.</p>
+				</div></div>
+
+	<div class="row gtr-150">
+	<div class="col-12">
+	<h3>Real-Time Part Recognition (Beta)</h3>
+	<p>Snap a photo of a product component and let SIAConnect identify it—powered by AI image recognition.</p>
+	</div></div>
 			</div>
 		</section>
 
@@ -384,22 +389,21 @@
       <h2>Deploying SIAConnect: The Road Ahead</h2>
 
     <div class="row gtr-150">
-      <div class="col-12">
-        <h2 style="text-align: center; font-size: 2rem; color: #cccccc; margin-top: 40px;">Rollout Strategy</h2>
-        <p style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 2px;">
-          Initial launch inside Microsoft Teams to targeted user groups, including Training, Help Desk Supervisors, and Senior Agents.</p>
+    <div class="col-12">
+        <h2>Rollout Strategy</h2>
+        <p>Initial launch inside Microsoft Teams to targeted user groups, including Training, Help Desk Supervisors, and Senior Agents.</p>
           <p>Phased expansion based on adoption success, user feedback, and feature readiness.</p>
           <p>All access managed securely through Microsoft Entra ID groups — no public exposure.
         </p>
 
-        <h2 style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">Onboarding Experience</h2>
+        <h2>Onboarding Experience</h2>
         <p>
           A streamlined "Welcome to SIAConnect" guide provided at rollout.</p>
           <p>In-chat tips and conversational guidance available immediately within Teams.</p>
           <p>Ongoing discovery supported through a "Tip of the Day" feature to keep users engaged.
         </p>
 
-        <h2 style="text-align: center; font-size: 1.2rem; color: #cccccc; margin-top: 40px;">Updates and Future Development</h2>
+        <h2>Updates and Future Development</h2>
         <p>
           Continuous feature improvements based on user feedback.</p>
           <p>Transparent feature request tracking through Jira.</p>
