--- a/request.html
+++ b/request.html
@@ -24,7 +24,6 @@ div:hover {
 
     <header id="header" class="alt">
         <div class="inner">
-		<div id="divimg"><img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" style="height:150px; vertical-align:middle; margin-right:10px;"></div>
 	<img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" style="height:150px; vertical-align:middle; margin-right:10px;">
             <h1>Creating a Document Request</h1>
             <p>This section will give you step-by-step guidance on creating a Document Request in SIAConnect.</p>
@@ -34,7 +33,7 @@ div:hover {
 <section class="help-section fade-in-section">
 	<div class="help-container">
            
-		    <img src="images/documentrequest-banner.png" style="width:50%; height:auto;">
+		    <div id="divimg"><img src="images/documentrequest-banner.png" style="width:50%; height:auto;"></div>
                 <h2>Document Request</h2>
           
             <ul><li">To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
