--- a/request.html
+++ b/request.html
@@ -6,18 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
 <style>
-div {
-  width: 100px;
-  height: 100px;
-  transition: width 2s, height 4s;
-}
-#divimg {transition-timing-function: ease;}
-	
-div:hover {
-  width: 300px;
-  height: 300px;
-}
-</style>
+
 </head>
 <body>
 <!-- Nav -->
@@ -33,10 +22,10 @@ div:hover {
 <section class="help-section fade-in-section">
 	<div class="help-container">
            
-		    <div id="divimg"><img src="images/documentrequest-banner.png" style="width:50%; height:auto;"></div>
+		    <img src="images/documentrequest-banner.png" style="width:50%; height:auto;">
                 <h2>Document Request</h2>
-          
-            <ul><li">To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
+          <hr>
+            <ul><li>To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
 	    <li>SIAConnect will respond with a document request form.</li>
 	   <li>Select which document type you are wanting (e.g., Tech bulletin, User Manual, Knowledge Base article).</li>
 	    <li>Select the product model that the request pertains to. If the model is not in the list, you can manually type in the model.</li>
