--- a/request.html
+++ b/request.html
@@ -8,24 +8,22 @@
 
 </head>
 <body>
-<!-- Nav -->
 
-    <header id="header" class="alt">
-        <div class="inner">
-	<img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" style="height:150px; vertical-align:middle; margin-right:10px;">
-            <h1>Creating a Document Request</h1>
-            <p>This section will give you step-by-step guidance on creating a Document Request in SIAConnect.</p>
 
-        </div>
-    </header>
-<section class="help-section fade-in-section">
+    <section class="future-section">
+        <div class="future-container">
+	   <img src="images/documentrequest-banner.png" style="width:50%; height:auto;" class='glow-image'>
+            <h2>Creating a Document Request</h2>
+	</div>
+        
+    </section>
+	<!-- Help Section -->
+<section class="help-section">
 	<div class="help-container">
+
            
-		    <img src="images/documentrequest-banner.png" style="width:50%; height:auto;">
-                <h2>Document Request</h2>
-          <hr>
-            <ul><li>To start a document request, simply type "Document Request" in the SIAConnect chat window.</li>
-	    <li>SIAConnect will respond with a document request form.</li>
+	<h3>To start a document request, simply type "Document Request" in the SIAConnect chat window.</h3>
+	    <ul> <li>SIAConnect will respond with a document request form.</li>
 	   <li>Select which document type you are wanting (e.g., Tech bulletin, User Manual, Knowledge Base article).</li>
 	    <li>Select the product model that the request pertains to. If the model is not in the list, you can manually type in the model.</li>
 	   <li>Add a description - this is everything that you want to make sure is completed and included in the document. The more information, the better!</li>
@@ -37,7 +35,41 @@
 	    <li>You will also receive an email confirmation of your request, which includes the document request number.</li>
 	    </ul>
         </div>
+<section id="hero" class="hero-section">
+	<div class="hero-container">
+    <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
+    <p>Knowledge at the Speed of Work.</p>
+  </div>
     </section>
+	<footer class="site-footer">
+  <div class="footer-container">
+    <p>© 2025 Glory Global Solutions</p>
+				<p>SIAConnect — Built for the future. Ready right now.</p>
+  </div>
+</footer>
+	<script>
+// Fade-in animation for sections
+const faders = document.querySelectorAll('.fade-in-section');
+
+const appearOptions = {
+  threshold: 0.1
+};
+
+const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
+  entries.forEach(entry => {
+    if (!entry.isIntersecting) {
+      return;
+    } else {
+      entry.target.classList.add('is-visible');
+      appearOnScroll.unobserve(entry.target);
+    }
+  });
+}, appearOptions);
+
+faders.forEach(fader => {
+  appearOnScroll.observe(fader);
+});
+</script>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.scrollex.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
