--- a/request.html
+++ b/request.html
@@ -35,6 +35,7 @@
 	    <li>You will also receive an email confirmation of your request, which includes the document request number.</li>
 	    </ul>
         </div>
+</section>
 <section id="hero" class="hero-section">
 	<div class="hero-container">
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
