--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
 <nav id="nav">
 <a href="#home">Home</a>
 <a href="#video">What's Possible</a>
-<a href="#benefits">AI Agent Benefits</a>
-<a href="#security">Security & Compliance</a>
-<a href="#access">Ways to Access</a>
+<a href="#benefits">Benefits</a>
+<a href="#access">Access</a>
 <a href="#features">Features</a>
 <a href="#comparison">Comparison</a>
 <a href="#behind-the-scenes">Behind the Scenes</a>
 <a href="#whats-next">The Future</a>
-<a href="#deployment">Roll Out</a>
 
 </nav>
 
