--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 		
 <!-- AIBenefits Section -->
-		<section id="benefits" class="benefit-section">
+		<section id="benefits" class="benefit-section fade-in-section">
 			<div class="benefit-container">
 			<h2>Benefits of implementing an AI Agent</h2>
 				
@@ -208,7 +208,7 @@
 
 		
 <!-- SIAConnect vs Current Method Comparison Table -->
-<section id="comparison" class="demo-section">
+<section id="comparison" class="demo-section fade-in-section">
   <div class="demo-container">
   <h2>How SIAConnect Compares</h2>
     <div class="comparison-wrapper">
@@ -441,7 +441,7 @@ Here’s how the first rollout and evolution of SIAConnect is planned:
   </div>
 </div>
 							<!-- Hero Section -->
-<section id="hero" class="hero-section">
+<section id="hero" class="hero-section fade-in-section">
 	<div class="hero-container">
     <img src="assets/images/siaconnect-logo-transparent-website.png" alt="SIAConnect Logo" class="hero-logo">
     <p>Knowledge at the Speed of Work.</p>
